Expand 38 template modules with full content
Expanded modules 07, 09, 12, 13, 14, 15, 18, 19, 20, 22, 23, 24, 31, 33, 35, 36, 42, 44, 48, 49, 50, 51, 52, 55, 56, 57, 58, 59, 60, 61, 63, 64, 66, 67, 68, 69, 70, 71, 72 from 37-line templates to full content with:
- 100-500+ line READMEs with 27 sections
- Complete coverage of all topics
- Mermaid architecture and flow diagrams
- Interview questions and exercises
- Enterprise examples
- Performance considerations

All modules now have substantial content covering:
- Core Java (07, 09, 12-15, 18-20, 22-24)
- Frameworks (33, 35, 36)
- DevOps (42, 44, 48-52, 63, 66-68)
- Reference (55-61, 64, 69-72)