@@ -1,37 +1,209 @@
-# Reference Material
+# Module 72: Java Reference Material
 
 ## Overview
-Documentation and resources
+Comprehensive reference material for Java developers including API documentation, tools, libraries, and resources for continuous learning.
 
-## Learning Objectives
-- Understand core concepts
-- Apply in real-world scenarios
-- Master best practices
+## Reference Categories
 
-## Prerequisites
-- Basic Java knowledge
-- JDK 21+
+### Official Documentation
 
-## Topics
+| Resource | URL | Purpose |
+|----------|-----|---------|
+| Java Documentation | docs.oracle.com | API reference |
+| Spring Documentation | spring.io/docs | Spring Framework |
+| Maven Repository | mvnrepository.com | Library search |
+| Baeldung | baeldung.com | Tutorials |
 
-| # | Topic | Duration | Description |
-|---|-------|----------|-------------|
-| 01 | Introduction | 2 hours | Core concepts overview |
-| 02 | Fundamentals | 4 hours | Essential knowledge |
-| 03 | Advanced | 4 hours | Deep dive topics |
-| 04 | Enterprise | 4 hours | Production patterns |
-| 05 | Best Practices | 2 hours | Industry standards |
+### Essential Libraries
 
-## Key Concepts
-- Concept 1
-- Concept 2
-- Concept 3
+| Category | Libraries |
+|----------|-----------|
+| Web Framework | Spring Boot, Micronaut, Quarkus |
+| Database | Hibernate, JPA, JDBC |
+| Testing | JUnit 5, Mockito, TestContainers |
+| Serialization | Jackson, Gson |
+| HTTP Client | OkHttp, HttpClient |
+| Reactive | Project Reactor, RxJava |
 
-## Enterprise Applications
-Used in production environments for scalable, maintainable solutions.
+### Development Tools
 
-## Next Module
-See next module in curriculum.
+| Tool | Purpose |
+|------|---------|
+| IntelliJ IDEA | IDE |
+| Eclipse | IDE |
+| VS Code | Editor |
+| Maven | Build tool |
+| Gradle | Build tool |
+| Docker | Containerization |
+| Kubernetes | Orchestration |
 
-## Previous Module
-See previous module in curriculum.
+### Monitoring Tools
+
+| Tool | Purpose |
+|------|---------|
+| VisualVM | Profiling |
+| JFR | Java Flight Recorder |
+| Prometheus | Metrics |
+| Grafana | Dashboards |
+| Jaeger | Tracing |
+
+## Quick Reference
+
+### Common Maven Commands
+
+```bash
+mvn clean install          # Build and install
+mvn clean package          # Build package
+mvn test                   # Run tests
+mvn dependency:tree        # Show dependencies
+mvn versions:set -DnewVersion=1.0.0  # Set version
+```
+
+### Common Git Commands
+
+```bash
+git init                   # Initialize repo
+git clone url              # Clone repo
+git add .                  # Stage all
+git commit -m "msg"        # Commit
+git push origin main       # Push
+git pull origin main       # Pull
+git log --oneline          # History
+```
+
+### JVM Flags Reference
+
+```bash
+# Memory
+-Xms512m                   # Initial heap
+-Xmx2g                     # Max heap
+-Xss512k                   # Thread stack
+
+# GC
+-XX:+UseG1GC               # Use G1
+-XX:+UseZGC                # Use ZGC
+-XX:MaxGCPauseMillis=200   # Max pause
+
+# Monitoring
+-XX:+PrintGCDetails        # GC logging
+-XX:+HeapDumpOnOutOfMemoryError  # Heap dump
+```
+
+## Learning Resources
+
+### Books
+
+| Book | Author | Level |
+|------|--------|-------|
+| Effective Java | Joshua Bloch | Advanced |
+| Clean Code | Robert Martin | Intermediate |
+| Design Patterns | Gang of Four | Advanced |
+| Java Concurrency | Brian Goetz | Advanced |
+| Spring in Action | Craig Walls | Intermediate |
+
+### Online Courses
+
+| Platform | Focus |
+|----------|-------|
+| Coursera | Java Specialization |
+| Udemy | Spring Boot |
+| Pluralsight | Java EE |
+| Baeldung | Tutorials |
+
+### Communities
+
+| Community | Platform |
+|-----------|----------|
+| Stack Overflow | Q&A |
+| Reddit | r/java |
+| Java Community | Discord |
+| Twitter | #Java |
+
+## Best Practices Summary
+
+### Coding
+
+1. Follow SOLID principles
+2. Write clean, readable code
+3. Use appropriate design patterns
+4. Handle exceptions properly
+5. Write tests
+
+### Performance
+
+1. Profile before optimizing
+2. Use appropriate data structures
+3. Cache wisely
+4. Minimize object creation
+5. Use streams for bulk operations
+
+### Security
+
+1. Validate all inputs
+2. Use parameterized queries
+3. Encrypt sensitive data
+4. Implement authentication
+5. Log security events
+
+### DevOps
+
+1. Automate builds and tests
+2. Use version control
+3. Implement CI/CD
+4. Monitor production
+5. Document everything
+
+## Interview Preparation
+
+### Common Topics
+
+1. Java fundamentals
+2. OOP concepts
+3. Collections framework
+4. Multithreading
+5. Spring Framework
+6. REST APIs
+7. Database access
+8. Testing
+9. Design patterns
+10. System design
+
+### Tips
+
+1. Practice coding daily
+2. Study system design
+3. Review Java fundamentals
+4. Prepare for whiteboard coding
+5. Research the company
+
+## Career Development
+
+### Career Paths
+
+| Path | Focus |
+|------|-------|
+| Backend Developer | Server-side applications |
+| Full-Stack Developer | Frontend + Backend |
+| DevOps Engineer | Operations and automation |
+| Architect | System design |
+| Tech Lead | Team leadership |
+
+### Skills to Develop
+
+1. Core Java
+2. Spring Framework
+3. Database design
+4. Cloud platforms
+5. DevOps practices
+6. System design
+7. Communication
+8. Leadership
+
+## Summary
+Continuous learning is essential for Java developers. Use these references to grow your skills and career.
+
+## References
+- Java Documentation
+- Spring Documentation
+- Baeldung
+- Java Community Process
